netbox-namespace.yaml
# NetBox namespace
# Managed by: Application team (in NetBox application repository)
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
